k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: youssefzahi/backend-image
          ports:
            - name : backend-port
              containerPort: 5000
          livenessProbe:
            httpGet:
              path: /api/healthCheck
              port: backend-port
            timeoutSeconds: 15
            periodSeconds: 120
          
          readinessProbe:
            httpGet:
              port: backend-port
              path: /api/healthCheck
            timeoutSeconds: 15
            periodSeconds: 13
    
          startupProbe:
            tcpSocket:
              port: backend-port
            failureThreshold: 10
            periodSeconds: 10
