k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template: 
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: youssefzahi/frontend-image
          ports:
            - name : frontend-port
              containerPort: 80
          livenessProbe:
            httpGet:
              path: /healthCheck
              port: frontend-port
            timeoutSeconds: 15
            periodSeconds: 120
          
          readinessProbe:
            httpGet:
              port: frontend-port
              path: /healthCheck
            timeoutSeconds: 15
            periodSeconds: 13
    
          startupProbe:
            tcpSocket:
              port: frontend-port
            failureThreshold: 10
            periodSeconds: 10
