k8s/mongodb-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  type: ClusterIP
  selector:
    app: mongodb-service
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
